--- a/index.html
+++ b/index.html
@@ -3,78 +3,158 @@
   <head>
     <meta charset="utf-8">
     <title>Arpan's Personal Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
-    <script type="text/javascript" scr="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/12.1.5/js/smooth-scroll.polyfills.min.js">
-    </script>
-
-    <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js">
-    </script>
-
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/12.1.5/js/smooth-scroll.polyfills.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+    </script>
   </head>
   <body>
     <nav>
+      <h3>Arpan NLN</h3>
       <ul>
-        <li> <a data-scroll href="#welcome"> Welcome </a> </li>
-        <li> <a data-scroll href="#technologies">Technologies </a> </li>
-        <li> <a data-scroll href="#about">About </a> </li>
-        <li> <a data-scroll href="#portfolio">Portfolio </a> </li>
-        <li> <a data-scroll href="#contact"> Contact </a> </li>
+        <li><a data-scroll href="#welcome">Welcome</a></li>
+        <li><a data-scroll href="#technologies">Technologies</a></li>
+        <li><a data-scroll href="#about">About</a></li>
+        <li><a data-scroll href="#portfolio">Portfolio</a></li>
+        <li><a data-scroll href="./contact.html">Contact</a></li>
       </ul>
     </nav>
     <header id="welcome">
-      Welcome
+      <h1>Welcome to my website</h1>
+      <h3>Lorem ipsum dolor sit amet</h3>
     </header>
     <main>
       <section id="technologies" class="container">
         <h2>Technologies</h2>
         <div class="row">
-
-          <div class="col s12 s6 m4 l3">
-            Test
-            <i class="devicon-amazonwebservices-original"></i>
+          <div class="col s12 m6 l4">
+            <i class="devicon-atom-original"></i>
           </div>
-          <div class="col s12 s6 m4 l3">
-            Test
-            <i class="devicon-amazonwebservices-original"></i>
+          <div class="col s12 m6 l4">
+            <i class="devicon-jquery-plain"></i>
           </div>
-          <div class="col s12 s6 m4 l3">
-            Test
-            <i class="devicon-amazonwebservices-original"></i>
+          <div class="col s12 m6 l4">
+            <i class="devicon-babel-original"></i>
           </div>
-          <div class="col s12 s6 m4 l3">
-            Test
-            <i class="devicon-amazonwebservices-original"></i>
+          <div class="col s12 m6 l4">
+            <i class="devicon-git-plain"></i>
           </div>
-          <div class="col s12 s6 m4 l3">
-            Test
-            <i class="devicon-amazonwebservices-original"></i>
+          <div class="col s12 m6 l4">
+            <i class="devicon-heroku-original"></i>
           </div>
-
-            <i class="devicon-react-original-wordmark colored"></i>
-            <i class="devicon-ruby-plain-wordmark colored"></i>
+          <div class="col s12 m6 l4">
+            <i class="devicon-javascript-plain"></i>
           </div>
         </div>
       </section>
-
       <section id="about">
-        About
+        <h2>About</h2>
       </section>
-
       <section id="portfolio">
-        Portfolio
+        <h2>Portfolio</h2>
+        <div class="row">
+        <div class="col s12 m6 l4">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/portoflio_img.png">
+              <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6 l4">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/portoflio_img.png">
+              <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6 l4">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/portoflio_img.png">
+              <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6 l4">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/portoflio_img.png">
+              <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6 l4">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/portoflio_img.png">
+              <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m6 l4">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/portoflio_img.png">
+              <span class="card-title">Card Title</span>
+            </div>
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information.
+              I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <a href="#">This is a link</a>
+            </div>
+          </div>
+        </div>
+      </div>
       </section>
-
       <section id="contact">
-        Contact
+        <h2>Contact</h2>
       </section>
     </main>
     <script>
-      var scroll = new SmoothScroll('a[href*="#"]');
+    	var scroll = new SmoothScroll('a[href*="#"]');
     </script>
   </body>
-
-
 </html>
