--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </ul>
     </nav>
     <header id="welcome">
-      <h1>Welcome to my website</h1>
-      <h3>Lorem ipsum dolor sit amet</h3>
+      <h1>And Hire Me</h1>
+      <h3></h3>
     </header>
     <main>
       <section id="technologies" class="container">
