--- a/index.html
+++ b/index.html
@@ -31,33 +31,51 @@
       <section id="technologies" class="container">
         <h2>Technologies</h2>
         <div class="row">
-          <div class="col s12 m6 l4">
-            <i class="devicon-atom-original"></i>
+          <div class="col s12 m4 l3">
+            <i class="devicon-react-original colored"></i>
+            <h3> React </h3>
           </div>
-          <div class="col s12 m6 l4">
-            <i class="devicon-jquery-plain"></i>
+          <div class="col s12 m4 l3">
+            <i class="devicon-ruby-plain colored"></i>
+            <h3> Ruby </h3>
           </div>
-          <div class="col s12 m6 l4">
-            <i class="devicon-babel-original"></i>
+          <div class="col s12 m4 l3">
+            <i class="devicon-rails-plain colored"></i>
+            <h3> Rails </h3>
           </div>
-          <div class="col s12 m6 l4">
-            <i class="devicon-git-plain"></i>
+          <div class="col s12 m4 l3">
+            <i class="devicon-css3-plain colored"></i>
+            <h3> CSS3 </h3>
           </div>
-          <div class="col s12 m6 l4">
-            <i class="devicon-heroku-original"></i>
+          <div class="col s12 m4 l3">
+            <i class="devicon-html5-plain colored"></i>
+            <h3> HTML5 </h3>
           </div>
-          <div class="col s12 m6 l4">
-            <i class="devicon-javascript-plain"></i>
+          <div class="col s12 m4 l3">
+            <i class="devicon-javascript-plain colored"></i>
+            <h3> JavaScript </h3>
+          </div>
+          <div class="col s12 m4 l3">
+            <i class="devicon-sass-original colored"></i>
+            <h3> Sass </h3>
+          </div>
+          <div class="col s12 m4 l3">
+            <i class="devicon-postgresql-plain colored"></i>
+            <h3> PostgreSQL </h3>
           </div>
         </div>
       </section>
       <section id="about">
         <h2>About</h2>
+        <p> Since a tragic haircut in 2010, I cut my own hair and since graduating UCLA with Electrical Engineering I develop my own websites. Personally I have experience developing web applications with a wide variety of technologies such as React, Redux, Rails.
+
+        <br/>
+        I have found that software development has become the perfect outlet for me to bring out my creative tendencies to complement my naturally inquisitive logical side.</p>
       </section>
       <section id="portfolio">
         <h2>Portfolio</h2>
         <div class="row">
-        <div class="col s12 m6 l4">
+        <div class="col s12 m4 l4">
           <div class="card">
             <div class="card-image">
               <img src="images/portoflio_img.png">
