wrapping up about section

--- a/index.html
+++ b/index.html
@@ -67,10 +67,14 @@
       </section>
       <section id="about">
         <h2>About</h2>
-        <p> Since a tragic haircut in 2010, I cut my own hair and since graduating UCLA with Electrical Engineering I develop my own websites. Personally I have experience developing web applications with a wide variety of technologies such as React, Redux, Rails.
+        <p> Since a tragic haircut in 2010, I cut my own hair and since graduating UCLA with Electrical Engineering I develop my own websites. Personally I have experience developing web applications with a wide variety of technologies such as React, Redux, Rails. </p>
+        <p>
+        I have found that software development has become the perfect outlet for me to bring out my creative tendencies to complement my naturally inquisitive logical side.
+      </p>
+        <p>
+        While I've had quite a bit of experience, I understand there's a lot of room for growth which is why I'm constantly learning new technologies. I'm always looking for opportunities to become the best version of myself.
+      </p>
 
-        <br/>
-        I have found that software development has become the perfect outlet for me to bring out my creative tendencies to complement my naturally inquisitive logical side.</p>
       </section>
       <section id="portfolio">
         <h2>Portfolio</h2>
@@ -83,7 +87,7 @@
             </div>
             <div class="card-content">
               <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
+              I am convenient because I require little markup to use effectively.  </p>
             </div>
             <div class="card-action">
               <a href="#">This is a link</a>
