--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
             <i class="devicon-postgresql-plain colored"></i>
             <h3> PostgreSQL </h3>
           </div>
+          <div class="col s12 m4 l3">
+            <i class="devicon-git-plain colored"></i>
+            <h3> Git </h3>
+          </div>
         </div>
       </section>
       <section id="about">
