finish about section

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <div class="col s12 m4 l4">
           <div class="card">
             <div class="card-image">
-              <img src="images/portoflio_img.png">
-              <span class="card-title">Card Title</span>
+              <img src="images/HumbleHome.png">
+              <span class="card-title">Humble</span>
             </div>
             <div class="card-content">
               <p>I am a very simple card. I am good at containing small bits of information.
