--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="col s12 m6 l4">
           <div class="card">
             <div class="card-image">
-              <img src="images/portoflio_img.png">
+              <img src="images/hoveringharryhome.png">
               <span class="card-title">Card Title</span>
             </div>
             <div class="card-content">
@@ -116,7 +116,7 @@
         <div class="col s12 m6 l4">
           <div class="card">
             <div class="card-image">
-              <img src="images/portoflio_img.png">
+              <img src="images/ShiftHome.png">
               <span class="card-title">Card Title</span>
             </div>
             <div class="card-content">
@@ -128,51 +128,7 @@
             </div>
           </div>
         </div>
-        <div class="col s12 m6 l4">
-          <div class="card">
-            <div class="card-image">
-              <img src="images/portoflio_img.png">
-              <span class="card-title">Card Title</span>
-            </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6 l4">
-          <div class="card">
-            <div class="card-image">
-              <img src="images/portoflio_img.png">
-              <span class="card-title">Card Title</span>
-            </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m6 l4">
-          <div class="card">
-            <div class="card-image">
-              <img src="images/portoflio_img.png">
-              <span class="card-title">Card Title</span>
-            </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
-            </div>
-          </div>
-        </div>
+
       </div>
       </section>
       <section id="contact">
