styled a bit more

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               I am convenient because I require little markup to use effectively.  </p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="#">Check me Out!</a>
             </div>
           </div>
         </div>
@@ -102,14 +102,14 @@
           <div class="card">
             <div class="card-image">
               <img src="images/hoveringharryhome.png">
-              <span class="card-title">Card Title</span>
+              <span class="card-title">Hovering Harry</span>
             </div>
             <div class="card-content">
               <p>I am a very simple card. I am good at containing small bits of information.
               I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="#">Check me Out!</a>
             </div>
           </div>
         </div>
@@ -117,14 +117,14 @@
           <div class="card">
             <div class="card-image">
               <img src="images/ShiftHome.png">
-              <span class="card-title">Card Title</span>
+              <span class="card-title">Shift-Swap</span>
             </div>
             <div class="card-content">
               <p>I am a very simple card. I am good at containing small bits of information.
               I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-              <a href="#">This is a link</a>
+              <a href="#">Check Me Out!</a>
             </div>
           </div>
         </div>
