setting up contact dropdown

--- a/index.html
+++ b/index.html
@@ -20,11 +20,18 @@
         <li><a data-scroll href="#technologies">Technologies</a></li>
         <li><a data-scroll href="#about">About</a></li>
         <li><a data-scroll href="#portfolio">Portfolio</a></li>
-        <li><a data-scroll href="./contact.html">Contact</a></li>
+        <li><a data-scroll href="#">Contact</a>
+          <section class="contact-links">
+            <li><a data-scroll href="#about">Email</a></li>
+            <li><a data-scroll href="#about">LinkedIn</a></li>
+            <li><a data-scroll href="#about">Github</a></li>
+            <li>My Digits</li>
+          </section>
+        </li>
       </ul>
     </nav>
     <header id="welcome">
-      <h1>And Hire Me</h1>
+      <h1>I'm here for you</h1>
       <h3></h3>
     </header>
     <main>
@@ -71,7 +78,7 @@
       </section>
       <section id="about">
         <h2>About</h2>
-        <p> Since a tragic haircut in 2010, I cut my own hair and since graduating UCLA with Electrical Engineering I develop my own websites. Personally I have experience developing web applications with a wide variety of technologies such as React, Redux, Rails. </p>
+        <p> Since a tragic haircut in 2010, I cut my own hair and since graduating UCLA with Electrical Engineering in 2017, I develop my own websites. Personally I have experience developing web applications with a wide variety of technologies such as React, Redux, Rails. </p>
         <p>
         I have found that software development has become the perfect outlet for me to bring out my creative tendencies to complement my naturally inquisitive logical side.
       </p>
@@ -90,11 +97,11 @@
               <span class="card-title">Humble</span>
             </div>
             <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.  </p>
+              <p>A social media platform to upload, share, and discover photos built with React/Redux frontend and Rails backend </p>
+              <br/>
             </div>
             <div class="card-action">
-              <a href="#">Check me Out!</a>
+              <a href="https://humblepx.herokuapp.com/#/">Check me Out!</a>
             </div>
           </div>
         </div>
@@ -105,11 +112,12 @@
               <span class="card-title">Hovering Harry</span>
             </div>
             <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
+              <p>A vanilla JavaScript based twist on the classic Helicopter game built with JS, Canvas, CSS3, HTML5</p>
+              <br/>
+              <br/>
             </div>
             <div class="card-action">
-              <a href="#">Check me Out!</a>
+              <a href="https://arpannln.github.io/HoveringHarry/">Check me Out!</a>
             </div>
           </div>
         </div>
@@ -120,19 +128,16 @@
               <span class="card-title">Shift-Swap</span>
             </div>
             <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
+              <p>A platform to allow employees of any workplace to swap shifts amongst themselves	built with React frontend, node.js/MongoDB backend</p>
             </div>
             <div class="card-action">
-              <a href="#">Check Me Out!</a>
+              <a href="http://shift-swap.herokuapp.com/">Check Me Out!</a>
             </div>
           </div>
         </div>
 
       </div>
-      </section>
-      <section id="contact">
-        <h2>Contact</h2>
+
       </section>
     </main>
     <script>
