make this baby live

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <li><a data-scroll href="#portfolio">Portfolio</a></li>
         <li><a data-scroll href="#">Contact</a>
           <section class="contact-links">
-            <li><a data-scroll href="#about">Email</a></li>
-            <li><a data-scroll href="#about">LinkedIn</a></li>
-            <li><a data-scroll href="#about">Github</a></li>
-            <li>My Digits</li>
+            <li><a href="mailto:arpannln@ucla.edu">Email</a></li>
+            <li><a href="https://www.linkedin.com/in/arpannln/">LinkedIn</a></li>
+            <li><a href="https://github.com/arpannln/">Github</a></li>
+            <li>408-859-1480</li>
           </section>
         </li>
       </ul>
