--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a data-scroll href="#technologies">Technologies</a></li>
         <li><a data-scroll href="#about">About</a></li>
         <li><a data-scroll href="#portfolio">Portfolio</a></li>
-        <li><a data-scroll href="#">Contact</a>
+        <li class="contact"><a data-scroll href="#" >Contact</a>
           <section class="contact-links">
             <li><a href="mailto:arpannln@ucla.edu">Email</a></li>
             <li><a href="https://www.linkedin.com/in/arpannln/">LinkedIn</a></li>
