--- a/index.html
+++ b/index.html
@@ -31,49 +31,46 @@
       </ul>
     </nav>
     <header id="welcome">
-      <h1>I'm here for you</h1>
+      <h1>I'm here for you.</h1>
       <h3></h3>
     </header>
     <main>
       <section id="technologies" class="container">
         <h2>Technologies</h2>
         <div class="row">
-          <div class="col s12 m4 l3">
+          <div class="col s12 m4 l2.2">
             <i class="devicon-react-original colored"></i>
             <h3> React </h3>
           </div>
-          <div class="col s12 m4 l3">
+          <div class="col s12 m4 l2.2">
             <i class="devicon-ruby-plain colored"></i>
             <h3> Ruby </h3>
           </div>
-          <div class="col s12 m4 l3">
+          <div class="col s12 m4 l2.2">
             <i class="devicon-rails-plain colored"></i>
             <h3> Rails </h3>
           </div>
-          <div class="col s12 m4 l3">
+          <div class="col s12 m4 l2.2">
             <i class="devicon-css3-plain colored"></i>
             <h3> CSS3 </h3>
           </div>
-          <div class="col s12 m4 l3">
+          <div class="col s12 m4 l2.2">
             <i class="devicon-html5-plain colored"></i>
             <h3> HTML5 </h3>
           </div>
-          <div class="col s12 m4 l3">
+          <div class="col s12 m4 l2.2">
             <i class="devicon-javascript-plain colored"></i>
             <h3> JavaScript </h3>
           </div>
-          <div class="col s12 m4 l3">
+          <div class="col s12 m4 l2.2">
             <i class="devicon-sass-original colored"></i>
             <h3> Sass </h3>
           </div>
-          <div class="col s12 m4 l3">
+          <div class="col s12 m4 l2.2">
             <i class="devicon-postgresql-plain colored"></i>
             <h3> PostgreSQL </h3>
           </div>
-          <div class="col s12 m4 l3">
-            <i class="devicon-git-plain colored"></i>
-            <h3> Git </h3>
-          </div>
+
         </div>
       </section>
       <section id="about">
@@ -90,7 +87,7 @@
       <section id="portfolio">
         <h2>Portfolio</h2>
         <div class="row">
-        <div class="col s12 m4 l4">
+        <div class="col s12 m6 l4">
           <div class="card">
             <div class="card-image">
               <img src="images/HumbleHome.png">
