fixed reshaping portfolio

--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
         <div class="col s12 m6 l4">
           <div class="card">
             <div class="card-image">
-              <img src="images/HumbleHome.png">
-              <span class="card-title">Humble</span>
+              <a href="https://humblepx.herokuapp.com/#/"><img src="images/HumbleHome.png">
+                <span class="card-title">Humble</span>
+              </a>
             </div>
             <div class="card-content">
               <p>A social media platform to upload, share, and discover photos built with React/Redux frontend and Rails backend </p>
@@ -105,8 +106,9 @@
         <div class="col s12 m6 l4">
           <div class="card">
             <div class="card-image">
-              <img src="images/hoveringharryhome.png">
-              <span class="card-title">Hovering Harry</span>
+              <a href="https://arpannln.github.io/HoveringHarry/"><img src="images/hoveringharryhome.png">
+                <span class="card-title">Hovering Harry</span>
+              </a>
             </div>
             <div class="card-content">
               <p>A vanilla JavaScript based twist on the classic Helicopter game built with JS, Canvas, CSS3, HTML5</p>
@@ -121,8 +123,10 @@
         <div class="col s12 m6 l4">
           <div class="card">
             <div class="card-image">
-              <img src="images/ShiftHome.png">
-              <span class="card-title">Shift-Swap</span>
+              <a href="http://shift-swap.herokuapp.com/"><img src="images/ShiftHome.png">
+                <span class="card-title">Shift-Swap</span>
+              </a>
+
             </div>
             <div class="card-content">
               <p>A platform to allow employees of any workplace to swap shifts amongst themselves	built with React frontend, node.js/MongoDB backend</p>
