--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       </ul>
     </nav>
     <header id="welcome">
-      <h1>I'm here for you.</h1>
+      <h1>Looking For a Star?</h1>
+      <h1>Meet Arpan NLN.</h1>
       <h3></h3>
     </header>
     <main>
