--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js">
     </script>
+    <link rel="stylesheet"
+ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   </head>
   <body>
     <nav>
@@ -31,8 +33,8 @@
       </ul>
     </nav>
     <header id="welcome">
-      <h1>Looking For a Star?</h1>
-      <h1>Meet Arpan NLN.</h1>
+      <h1 class="animated slideInLeft">Looking For a Star?</h1>
+      <h1 class="animated slideInRight">Meet Arpan NLN.</h1>
       <h3></h3>
     </header>
     <main>
