basically just working on making my site better

--- a/index.html
+++ b/index.html
@@ -78,11 +78,9 @@
       </section>
       <section id="about">
         <h2>About</h2>
-        <p> Since a tragic haircut in 2010, I cut my own hair and since graduating UCLA with Electrical Engineering in 2017, I develop my own websites. Personally I have experience developing web applications with a wide variety of technologies such as React, Redux, Rails. </p>
-        <p>
+        <p> Since a tragic haircut in 2010, I cut my own hair and since graduating UCLA with Electrical Engineering in 2017, I develop my own websites. Personally I have experience developing web applications with a wide variety of technologies such as React, Redux, Rails. <br> <br>
         I have found that software development has become the perfect outlet for me to bring out my creative tendencies to complement my naturally inquisitive logical side.
-      </p>
-        <p>
+      <br> <br>
         While I've had quite a bit of experience, I understand there's a lot of room for growth which is why I'm constantly learning new technologies. I'm always looking for opportunities to become the best version of myself.
       </p>
 
