--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <header id="welcome">
       <h1 class="animated slideInLeft">Looking For a Star?</h1>
       <h1 class="animated slideInRight">Meet Arpan NLN.</h1>
+       <img  src="https://res.cloudinary.com/arpannln/image/upload/v1518650822/stars.png" alt="">
       <h3></h3>
     </header>
     <main>
