--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway" rel="stylesheet">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js">
     </script>
+    <script type="text/javascript" src="./coolstuff.js">
+    </script>
     <link rel="stylesheet"
  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   </head>
@@ -35,8 +37,9 @@
     <header id="welcome">
       <h1 class="animated slideInLeft">Looking For a Star?</h1>
       <h1 class="animated slideInRight">Meet Arpan NLN.</h1>
-       <img  src="https://res.cloudinary.com/arpannln/image/upload/v1518650822/stars.png" alt="">
-      <h3></h3>
+      <a href="#about">
+      <img id="star"  src="https://res.cloudinary.com/arpannln/image/upload/v1518650822/stars.png" alt="">
+      </a>
     </header>
     <main>
       <section id="technologies" class="container">
@@ -71,7 +74,7 @@
             <h3> Sass </h3>
           </div>
           <div class="col s12 m4 l2.2">
-            <i class="devicon-postgresql-plain colored"></i>
+            <i class="devicon-postgresql-plain"></i>
             <h3> PostgreSQL </h3>
           </div>
 
