--- a/index.html
+++ b/index.html
@@ -37,43 +37,43 @@
     <header id="welcome">
       <h1 class="animated slideInLeft">Looking For a Star?</h1>
       <h1 class="animated slideInRight">Meet Arpan NLN.</h1>
-      <a href="#about">
+      <a href="#technologies">
       <img id="star"  src="https://res.cloudinary.com/arpannln/image/upload/v1518650822/stars.png" alt="">
       </a>
     </header>
     <main>
       <section id="technologies" class="container">
-        <h2>Technologies</h2>
+        <h2>What can I help you with?</h2>
         <div class="row">
-          <div class="col s12 m4 l2.2">
+          <div class="col s12 m4 l2">
             <i class="devicon-react-original colored"></i>
             <h3> React </h3>
           </div>
-          <div class="col s12 m4 l2.2">
+          <div class="col s12 m4 l2">
             <i class="devicon-ruby-plain colored"></i>
             <h3> Ruby </h3>
           </div>
-          <div class="col s12 m4 l2.2">
+          <div class="col s12 m4 l2">
             <i class="devicon-rails-plain colored"></i>
             <h3> Rails </h3>
           </div>
-          <div class="col s12 m4 l2.2">
+          <div class="col s12 m4 l2">
             <i class="devicon-css3-plain colored"></i>
             <h3> CSS3 </h3>
           </div>
-          <div class="col s12 m4 l2.2">
+          <div class="col s12 m4 l2">
             <i class="devicon-html5-plain colored"></i>
             <h3> HTML5 </h3>
           </div>
-          <div class="col s12 m4 l2.2">
+          <div class="col s12 m4 l2">
             <i class="devicon-javascript-plain colored"></i>
             <h3> JavaScript </h3>
           </div>
-          <div class="col s12 m4 l2.2">
+          <div class="col s12 m4 l2">
             <i class="devicon-sass-original colored"></i>
             <h3> Sass </h3>
           </div>
-          <div class="col s12 m4 l2.2">
+          <div class="col s12 m4 l2">
             <i class="devicon-postgresql-plain"></i>
             <h3> PostgreSQL </h3>
           </div>
