--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </nav>
     <header id="welcome">
       <h1 class="animated slideInLeft">Looking For a Star?</h1>
-      <h1 class="animated slideInRight">Meet Arpan NLN.</h1>
+      <h1 class="animated slideInRight">Hi, </h1>
       <a href="#technologies">
       <img id="star"  src="https://res.cloudinary.com/arpannln/image/upload/v1518650822/stars.png" alt="">
       </a>
