tryna do some asynch shit

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       </ul>
     </nav>
     <header id="welcome">
-      <h1 class="animated slideInLeft">Looking For a Star?</h1>
-      <h1 class="animated slideInRight">Hi, </h1>
+      <h1 class="animated fadeIn">Looking For a Star?</h1>
+      <h1 class="animated fadeIn" id="hi"></h1>
       <a href="#technologies">
       <img id="star"  src="https://res.cloudinary.com/arpannln/image/upload/v1518650822/stars.png" alt="">
       </a>
