hella changes to make

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <nav>
-      <h3>Arpan NLN</h3>
+      <h3>Arpan NLN, Software Developer</h3>
       <ul>
         <li><a data-scroll href="#welcome">Welcome</a></li>
         <li><a data-scroll href="#technologies">Technologies</a></li>
@@ -36,59 +36,12 @@
     </nav>
     <header id="welcome">
       <h1 class="animated fadeIn">Looking For a Star?</h1>
-      <h1 class="animated fadeIn" id="hi"></h1>
+      <h1 class="hi animated fadeIn" id="hi"> Hi, </h1>
       <a href="#technologies">
       <img id="star"  src="https://res.cloudinary.com/arpannln/image/upload/v1518650822/stars.png" alt="">
       </a>
     </header>
     <main>
-      <section id="technologies" class="container">
-        <h2>What can I help you with?</h2>
-        <div class="row">
-          <div class="col s12 m4 l2">
-            <i class="devicon-react-original colored"></i>
-            <h3> React </h3>
-          </div>
-          <div class="col s12 m4 l2">
-            <i class="devicon-ruby-plain colored"></i>
-            <h3> Ruby </h3>
-          </div>
-          <div class="col s12 m4 l2">
-            <i class="devicon-rails-plain colored"></i>
-            <h3> Rails </h3>
-          </div>
-          <div class="col s12 m4 l2">
-            <i class="devicon-css3-plain colored"></i>
-            <h3> CSS3 </h3>
-          </div>
-          <div class="col s12 m4 l2">
-            <i class="devicon-html5-plain colored"></i>
-            <h3> HTML5 </h3>
-          </div>
-          <div class="col s12 m4 l2">
-            <i class="devicon-javascript-plain colored"></i>
-            <h3> JavaScript </h3>
-          </div>
-          <div class="col s12 m4 l2">
-            <i class="devicon-sass-original colored"></i>
-            <h3> Sass </h3>
-          </div>
-          <div class="col s12 m4 l2">
-            <i class="devicon-postgresql-plain"></i>
-            <h3> PostgreSQL </h3>
-          </div>
-
-        </div>
-      </section>
-      <section id="about">
-        <h2>About</h2>
-        <p> Since a tragic haircut in 2010, I cut my own hair and since graduating UCLA with Electrical Engineering in 2017, I develop my own websites. Personally I have experience developing web applications with a wide variety of technologies such as React, Redux, Rails. <br> <br>
-        I have found that software development has become the perfect outlet for me to bring out my creative tendencies to complement my naturally inquisitive logical side.
-      <br> <br>
-        While I've had quite a bit of experience, I understand there's a lot of room for growth which is why I'm constantly learning new technologies. I'm always looking for opportunities to become the best version of myself.
-      </p>
-
-      </section>
       <section id="portfolio">
         <h2>Portfolio</h2>
         <div class="row">
@@ -145,6 +98,54 @@
       </div>
 
       </section>
+      <section id="technologies" class="container">
+        <h2>What can I help you with?</h2>
+        <div class="row">
+          <div class="col s12 m4 l2">
+            <i class="devicon-react-original colored"></i>
+            <h3> React </h3>
+          </div>
+          <div class="col s12 m4 l2">
+            <i class="devicon-ruby-plain colored"></i>
+            <h3> Ruby </h3>
+          </div>
+          <div class="col s12 m4 l2">
+            <i class="devicon-rails-plain colored"></i>
+            <h3> Rails </h3>
+          </div>
+          <div class="col s12 m4 l2">
+            <i class="devicon-css3-plain colored"></i>
+            <h3> CSS3 </h3>
+          </div>
+          <div class="col s12 m4 l2">
+            <i class="devicon-html5-plain colored"></i>
+            <h3> HTML5 </h3>
+          </div>
+          <div class="col s12 m4 l2">
+            <i class="devicon-javascript-plain colored"></i>
+            <h3> JavaScript </h3>
+          </div>
+          <div class="col s12 m4 l2">
+            <i class="devicon-sass-original colored"></i>
+            <h3> Sass </h3>
+          </div>
+          <div class="col s12 m4 l2">
+            <i class="devicon-postgresql-plain"></i>
+            <h3> PostgreSQL </h3>
+          </div>
+
+        </div>
+      </section>
+      <section id="about">
+        <h2>About</h2>
+        <p> Since a tragic haircut in 2010, I cut my own hair and since graduating UCLA with Electrical Engineering in 2017, I develop my own websites. Personally I have experience developing web applications with a wide variety of technologies such as React, Redux, Rails. <br> <br>
+        I have found that software development has become the perfect outlet for me to bring out my creative tendencies to complement my naturally inquisitive logical side.
+      <br> <br>
+        While I've had quite a bit of experience, I understand there's a lot of room for growth which is why I'm constantly learning new technologies. I'm always looking for opportunities to become the best version of myself.
+      </p>
+
+      </section>
+
     </main>
     <script>
     	var scroll = new SmoothScroll('a[href*="#"]');
