jesus i hate overwriting everything

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <h3>Arpan NLN, Software Developer</h3>
       <ul>
         <li><a data-scroll href="#welcome">Welcome</a></li>
+        <li><a data-scroll href="#portfolio">Portfolio</a></li>
         <li><a data-scroll href="#technologies">Technologies</a></li>
         <li><a data-scroll href="#about">About</a></li>
-        <li><a data-scroll href="#portfolio">Portfolio</a></li>
         <li class="contact"><a data-scroll href="#" >Contact</a>
           <section class="contact-links">
             <li><a href="mailto:arpannln@ucla.edu">Email</a></li>
@@ -38,11 +38,13 @@
     <header id="welcome">
       <h1 class="animated fadeIn">Looking For a Star?</h1>
       <h1 class="hi animated fadeIn" id="hi"> Hi, </h1>
-      <a href="#technologies">
+      <a href="#portfolio">
       <img id="star"  src="https://res.cloudinary.com/arpannln/image/upload/v1518650822/stars.png" alt="">
       </a>
     </header>
     <main>
+
+
       <section id="portfolio">
         <h2>Portfolio</h2>
         <div class="row">
@@ -99,7 +101,7 @@
       </div>
 
       </section>
-      <br> <br> <br> <br> <br> <br> <br> <br> <br>
+      <br><br><br><br><br><br><br>
       <section id="technologies" class="container">
         <h2>What can I help you with?</h2>
         <div class="row">
@@ -138,8 +140,7 @@
 
         </div>
       </section>
-
-      <br> <br> <br> <br> <br> <br> <br> <br> <br>
+      <br><br><br><br><br><br><br>
       <section id="about">
         <h2>About</h2>
         <p> Since a tragic haircut in 2010, I cut my own hair and since graduating UCLA with Electrical Engineering in 2017, I develop my own websites. Personally I have experience developing web applications with a wide variety of technologies such as React, Redux, Rails. <br> <br>
@@ -149,7 +150,6 @@
       </p>
 
       </section>
-
     </main>
     <script>
     	var scroll = new SmoothScroll('a[href*="#"]');
