--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="card">
             <div class="card-image">
               <a href="https://ui.acridly34.hasura-app.io/#/"><img src="https://github.com/arpannln/ReactathonProject/blob/master/microservices/ui/app/src/images/giphy.gif?raw=true">
-                <span class="card-title">Humble</span>
+                <span class="card-title">We're Not Alone</span>
               </a>
             </div>
             <div class="card-content">
